# carbem

./: Cargo.toml  Contributing.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: rust_native.rs
src/: client.rs  error.rs  ffi.rs  lib.rs  models.rs
src/providers/: config.rs  mod.rs  registry.rs
src/providers/azure/: client.rs  models.rs
src/providers/ibm/: client.rs  mod.rs  models.rs
