[package]
name = "carbem"
version = "0.1.0"
edition = "2021"
description = "A Rust library for retrieving carbon emission values from cloud providers"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/carbem"
keywords = ["carbon", "emissions", "cloud", "sustainability", "environment"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "carbem"
path = "src/lib.rs"